--- a/geowords/package.json
+++ b/geowords/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "geonumber",
+  "name": "geowords",
   "version": "0.1.0",
   "description": "Library for encoding geographic coordinates as single number with any number of bits",
   "main": "index.mjs",
   "scripts": {
     "test": "tape tests/*"
   },
-  "keywords": ["geocode", "what3words", "geonumber", "geowords"],
+  "keywords": [
+    "geocode",
+    "what3words",
+    "geonumber",
+    "geowords"
+  ],
   "author": "Michal Laszczewski",
   "license": "BSD-3-Clause",
   "private": false,
