--- a/geonumber/package.json
+++ b/geonumber/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/MLaszczewski/geowords.git",
     "directory": "packages/geonumber"
   },
+  "type": "module",
   "main": "index.mjs",
   "scripts": {
     "test": "tape tests/*"
