--- a/geowords/package.json
+++ b/geowords/package.json
@@ -1,12 +1,13 @@
 {
   "name": "geowords",
   "version": "0.1.0",
-  "description": "Library for encoding geographic coordinates as sequence of words",
+  "description": "Library for encoding geographic coordinates as sequence of words from bip39 set",
   "repository": {
     "type": "git",
     "url": "https://github.com/MLaszczewski/geowords.git",
     "directory": "packages/geowords"
   },
+  "type": "module",
   "main": "index.mjs",
   "scripts": {
     "test": "tape tests/*"
@@ -15,7 +16,8 @@
     "geocode",
     "what3words",
     "geonumber",
-    "geowords"
+    "geowords",
+    "bip39"
   ],
   "author": {
     "name" : "Michał Łaszczewski",
