--- a/packages/geonumber/package.json
+++ b/packages/geonumber/package.json
@@ -8,9 +8,13 @@
     "directory": "packages/geonumber"
   },
   "type": "module",
-  "main": "index.mjs",
+  "main": "lib/index.mjs",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "tape tests/*"
+    "test": "tape tests/*",
+    "build": "tsc --build && renamer --find '/\\.js/i' --replace '.mjs' './lib/**/*'",
+    "clean": "tsc --build --clean",
+    "prepare": "npm run build"
   },
   "keywords": [
     "geocode",
@@ -31,6 +35,11 @@
   },
   "private": false,
   "devDependencies": {
-    "tape": "^5.6.0"
+    "tape": "^5.6.0",
+    "renamer": "^4.0.0",
+    "tsc": "^2.0.4",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
   }
 }
