--- a/packages/geonumber/package.json
+++ b/packages/geonumber/package.json
@@ -12,7 +12,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "tape tests/*",
-    "build": "tsc --build && renamer --find '/\\.js/i' --replace '.mjs' './lib/**/*'",
+    "build": "rimraf ./lib; tsc --build && renamer --find '/\\.js/i' --replace '.mjs' './lib/**/*'",
     "clean": "tsc --build --clean",
     "prepare": "npm run build"
   },
@@ -38,7 +38,8 @@
     "tape": "^5.6.0",
     "renamer": "^4.0.0",
     "tsc": "^2.0.4",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
   }
