--- a/packages/geowords/package.json
+++ b/packages/geowords/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geowords",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Library for encoding geographic coordinates as sequence of words from bip39 set",
   "repository": {
     "type": "git",
@@ -36,10 +36,10 @@
   },
   "private": false,
   "devDependencies": {
-    "tape": "^5.6.0",
     "renamer": "^4.0.0",
+    "rimraf": "^3.0.2",
+    "tape": "^5.6.0",
     "tsc": "^2.0.4",
-    "typescript": "^4.8.4",
-    "rimraf": "^3.0.2"
+    "typescript": "^4.8.4"
   }
 }
