--- a/packages/geonumber/package.json
+++ b/packages/geonumber/package.json
@@ -14,6 +14,7 @@
     "test": "tape tests/*",
     "build": "rimraf ./lib; tsc --build && renamer --find '/\\.js/i' --replace '.mjs' './lib/**/*'",
     "clean": "tsc --build --clean",
+    "docs": "typedoc --plugin typedoc-plugin-markdown src/index.ts --githubPages false --readme none --theme markdown && concat-md --dir-name-as-title docs > docs.md && rimraf docs",
     "prepare": "npm run build"
   },
   "keywords": [
@@ -39,6 +40,9 @@
     "rimraf": "^3.0.2",
     "tape": "^5.6.0",
     "tsc": "^2.0.4",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "typedoc": "^0.23.15",
+    "typedoc-plugin-markdown": "^3.13.6",
+    "concat-md": "^0.5.0"
   }
 }
