--- a/packages/geonumber/tsconfig.json
+++ b/packages/geonumber/tsconfig.json
@@ -7,7 +7,7 @@
     "target": "es2020",
     "module": "ES2020",
     "moduleResolution": "node",
-    "lib": ["es2020"],
+    "lib": ["es2020", "dom"],
     "allowSyntheticDefaultImports": true,
     "declaration": true
   },
