--- a/packages/geowords/tsconfig.json
+++ b/packages/geowords/tsconfig.json
@@ -6,8 +6,8 @@
     "sourceMap": true,
     "target": "es2020",
     "module": "ES2020",
-    "moduleResolution": "node",
-    "lib": ["es2020"],
+    "moduleResolution": "nodenext",
+    "lib": ["es2020", "dom"],
     "allowSyntheticDefaultImports": true,
     "declaration": true
   },
