--- a/packages/geonumber/package.json
+++ b/packages/geonumber/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geonumber",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Library for encoding geographic coordinates as single number with any number of bits",
   "repository": {
     "type": "git",
@@ -36,13 +36,13 @@
   },
   "private": false,
   "devDependencies": {
+    "concat-md": "^0.5.0",
     "renamer": "^4.0.0",
     "rimraf": "^3.0.2",
     "tape": "^5.6.0",
     "tsc": "^2.0.4",
-    "typescript": "^4.8.4",
     "typedoc": "^0.23.15",
     "typedoc-plugin-markdown": "^3.13.6",
-    "concat-md": "^0.5.0"
+    "typescript": "^4.8.4"
   }
 }
