--- a/packages/geowords/package.json
+++ b/packages/geowords/package.json
@@ -39,6 +39,9 @@
     "email": "geowords@laszczewski.com"
   },
   "private": false,
+  "dependencies": {
+    "yargs": "^17.2.1"
+  },
   "devDependencies": {
     "concat-md": "^0.5.0",
     "renamer": "^4.0.0",
@@ -47,7 +50,6 @@
     "tsc": "^2.0.4",
     "typedoc": "^0.23.15",
     "typedoc-plugin-markdown": "^3.13.6",
-    "typescript": "^4.8.4",
-    "yargs": "^17.2.1"
+    "typescript": "^4.8.4"
   }
 }
