--- a/packages/geowords/package.json
+++ b/packages/geowords/package.json
@@ -40,7 +40,8 @@
   },
   "private": false,
   "dependencies": {
-    "yargs": "^17.2.1"
+    "yargs": "^17.2.1",
+    "geonumber": "0.4.2"
   },
   "devDependencies": {
     "concat-md": "^0.5.0",
