--- a/packages/geowords/package.json
+++ b/packages/geowords/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geowords",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "description": "Tool for encoding geographic coordinates as sequence of words from bip39 or other dictionary",
   "repository": {
     "type": "git",
@@ -40,8 +40,8 @@
   },
   "private": false,
   "dependencies": {
-    "yargs": "^17.2.1",
-    "geonumber": "0.4.2"
+    "geonumber": "^0.4.3",
+    "yargs": "^17.2.1"
   },
   "devDependencies": {
     "concat-md": "^0.5.0",
